# Learning-OpGL

./: .gitignore  README.md
01-Getting Started/: CMakeLists.txt
01-Getting Started/src/: includes.h  main.cpp  shader.cpp  window.cpp
02-Lighting/: CMakeLists.txt
02-Lighting/.cache/clangd/index/: includes.h.7C205192B187E395.idx  includes.h.E08509D0DA1225C8.idx  lightshader.cpp.728E506A467F6129.idx  main.cpp.0ABA9E68C3F69DBB.idx  main.cpp.B08742E5176B25AA.idx  shader.cpp.A94F1350D415AA59.idx  shader.cpp.B5315D286F0466C8.idx  stb_image.h.6025C86634D242B2.idx  stb_image.h.9DA890E62115057F.idx  window.cpp.2D0D010E9B7D52C3.idx  window.cpp.9C06DCADE044E880.idx
02-Lighting/shaders/: basic_lighting.fs  basic_lighting.vs  light_cube.fs  light_cube.vs
02-Lighting/src/: includes.h  lightshader.cpp  main.cpp  shader.cpp  window.cpp
03-Model Loading/: CMakeLists.txt
03-Model Loading/.cache/clangd/index/: camera.cpp.0371E20942B5D36E.idx  camera.cpp.78C0885DF81ADDAA.idx  camera.hpp.8FEA430E8DB076FE.idx  found_libs.hpp.08202B3A45F55ECA.idx  found_libs.hpp.0B055272E478D3B8.idx  found_libs.hpp.8EC215726D269B45.idx  main.cpp.2CB2DF3ADCD95E0B.idx  main.cpp.C11B396493312999.idx  mesh.hpp.75E08B2E2CBBF237.idx  model.hpp.CD80A68661F6C469.idx  nuklear.h.02E0763036ADADF6.idx  nuklear_glfw_gl4.h.F0F2F2D9E25DB82F.idx  shader.cpp.898DC3B882AACD49.idx  stb_image.h.12E1A74FD261BFDA.idx  stb_image.h.3975F0DA8977F209.idx  ui.hpp.D2767BDF06C42F74.idx  window.cpp.46B9DF4E0DF6F549.idx  window.cpp.751EB76A92849F5F.idx  window.hpp.1609342A4249ED9C.idx
03-Model Loading/include/: found_libs.hpp  nuklear.h  nuklear_glfw_gl4.h
03-Model Loading/shaders/: fragment_shader.fs  sh.fs  sh.vs
03-Model Loading/src/: camera.hpp  main.cpp  mesh.hpp  model.hpp  ui.hpp  window.hpp
03-Model Loading/src/resources/models/: Tower.gltf  Tower.mtl
04-Advanced OpenGL/: CMakeLists.txt
04-Advanced OpenGL/.cache/clangd/index/: camera.hpp.071F53BC898B24CE.idx  found_libs.hpp.5CD8002D304EFC1B.idx  grid.hpp.EFD8CDD0EDF2728B.idx  main.cpp.E0E55D2C796ED282.idx  mesh.hpp.CAC91ADDE596AE92.idx  model.hpp.7EB0E9FC533C92AD.idx  nuklear.h.142A6E1B4F1ADA94.idx  nuklear_glfw_gl4.h.458069839411A84E.idx  shader.cpp.6FEF9C6AE73724BA.idx  shader.hpp.5824DCBDB3419E45.idx  stb_image.h.AA009E0B2B05DFE3.idx  style.c.96B8704726C0CBBB.idx  ui.cpp.F75DFF3A271ED7B8.idx  window.hpp.3AC0C07FEF55612F.idx
04-Advanced OpenGL/include/: found_libs.hpp
04-Advanced OpenGL/shaders/: grid.fs  sh.fs  sh.vs  shaderSingleColor.fs
04-Advanced OpenGL/src/: camera.hpp  grid.hpp  main.cpp  mesh.hpp  model.hpp  shader.cpp  style.c  ui.cpp  window.hpp
04-Advanced OpenGL/src/resources/meshes/: ChapanBox.gltf  ChapanBox.mtl  Ground.gltf
